# rain-effect

./: Cargo.toml  LICENSE  README.md  package.json
js/: index.js
src/: drop.rs  image_future.rs  images.rs  lib.rs  rain_drops.rs  rain_effect.rs  rain_render.rs  shader.rs  textures.rs  weather.rs  webgl.rs
static/: index.html
